# gemini-fullstack-langgraph-quickstart

./: .env.production  .gcloudignore  CLAUDE.md  DEMO_ACCESS_GUIDE.md  DEPLOYMENT.md  cloudbuild.yaml  deploy-cloudrun.sh  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml
backend/: .env.example  Dockerfile.cloudrun  cloudbuild.yaml  debug_server.py  demo_app.py  demo_app_backup.py  full_seo_demo.py  live_demo.py  pyproject.toml  requirements.txt  research_birth_flowers.py  simple_api_test.py  simple_cms_demo.py  simple_tone_manner_demo.py  simple_web_demo.py  test_analytics.db  test_auth_bypass.db  test_auth_bypass.py  test_cms_demo.py  test_competitor_research.py  test_content.db  test_gemini_api.py  test_integration.py  test_keyword_analyzer_simple.py  test_seo_research_integration.py  test_server.py  test_simple_api.py  test_simple_keyword_api.py  tone_manner_demo.py
backend/database/schema/: ai_services.sql  content_management.sql  user_management.sql
backend/src/: __init__.py  main.py  run_server.py
backend/src/agent/: app.py  auth_app.py  graph.py  seo_graph.py  seo_research_graph.py  seo_state.py  seo_tools.py  seo_workflow_graph.py
backend/src/analytics/: __init__.py  advanced_statistical_analyzer.py  article_metrics.py  statistical_analyzer.py
backend/src/api/: __init__.py  auth.py  deps.py
backend/src/content/: __init__.py  article_planning_engine.py  article_repository.py  content_management_system.py  content_structure_template.py  deep_research_content_generator.py  fact_checking_system.py  meta_description_generator.py  persona_analyzer.py  thumbnail_image_generator.py  tone_manner_engine.py
backend/src/core/: config.py  encryption.py  rate_limiter.py  security.py
backend/src/db/: deps.py  init_db.py  session.py
backend/src/models/: __init__.py  api_key.py  article.py  article_analytics.py  base.py  keyword.py  project.py  user.py
backend/src/schemas/: api_key.py  article.py  content.py  token.py  user.py
backend/src/seo/: __init__.py  competitor_analyzer.py  data_sources.py  keyword_analyzer.py  keyword_research_workflow.py  trend_analyzer.py
backend/src/services/: api_key_service.py  external_apis.py  user_service.py
backend/src/testing/: __init__.py  code_analyzer.py  coverage_monitor.py  edge_case_generator.py  pattern_detector.py  test_generation_engine.py
backend/src/types/: __init__.py  ai_services.py  content.py  user.py
backend/tests/: __init__.py  conftest.py  test_analytics_api.py  test_article_repository.py  test_article_structure.py  test_birth_flower_api.py  test_birth_flower_keyword_analyzer.py  test_content_api.py  test_content_management_system.py  test_deep_research_content_generator.py  test_fact_checking_system.py  test_generation_engine.py  test_keyword_analyzer.py  test_keyword_research_api.py  test_meta_description_generator.py  test_models.py  test_models_simple.py  test_thumbnail_image_generator.py  test_tone_manner_engine.py
backend/tests_tdd/: __init__.py  adaptive_test_suite.py  test_keyword_analyzer_enhanced.py
backend/tests_tdd/core/: __init__.py  convergence_checker.py  coverage_monitor.py  quality_evaluator.py  test_coverage_monitor.py  test_runner.py  test_test_generation_engine.py
backend/tests_tdd/critical_path/: test_ai_service_manager.py  test_ai_service_manager_critical.py  test_content_generation_engine.py
(+71 files in other folders)
